Add content inside elements

--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 </head>
 <body>
   <div class="header">
+    <ul>
+        <li><a href="#">Header link 1</a></li>
+        <li><a href="#">Header link 2</a></li>
+        <li><a href="#">Header link 3</a></li>
+    </ul>
 
   </div>
 
   <div class="main">
-
+    <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet? Dolorem dignissimos maiores non delectus possimus dolor nulla repudiandae vitae provident quae, obcaecati ipsam unde impedit corrupti veritatis minima porro?</div>
+    <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi quaerat qui iure ipsam maiores velit tempora, deleniti nesciunt fuga suscipit alias vero rem, corporis officia totam saepe excepturi odit ea.</div>
+    <div class="card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis illo ex quas, commodi eligendi aliquam ut, dolor, atque aliquid iure nulla. Laudantium optio accusantium quaerat fugiat, natus officia esse autem?</div>
+    <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nihil impedit eius amet adipisci dolorum vel nostrum sit excepturi corporis tenetur cum, dolore incidunt blanditiis. Unde earum minima laboriosam eos!</div>
   </div>
 
   <div class="quotes">
@@ -21,10 +29,12 @@
   </div>
 
   <div class="action">
-    
+
   </div>
   
-  
+  <div class="footer">
+    Website done by MB
+  </div>
     
 </body>
 </html>
