--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 <body>
   <div class="header">
+    <div class="logo">Header Logo</div>
     <ul>
         <li><a href="#">Header link 1</a></li>
         <li><a href="#">Header link 2</a></li>
         <li><a href="#">Header link 3</a></li>
     </ul>
-
   </div>
 
+  <div class="content">
   <div class="main">
     <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet? Dolorem dignissimos maiores non delectus possimus dolor nulla repudiandae vitae provident quae, obcaecati ipsam unde impedit corrupti veritatis minima porro?</div>
     <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi quaerat qui iure ipsam maiores velit tempora, deleniti nesciunt fuga suscipit alias vero rem, corporis officia totam saepe excepturi odit ea.</div>
@@ -25,15 +26,17 @@
   </div>
 
   <div class="quotes">
-
+    “Why, then, the world's mine oyster, which I with sword will open!”
+    -Shakespear 1602
   </div>
 
   <div class="action">
 
   </div>
-  
+  </div>
+
   <div class="footer">
-    Website done by MB
+    Footer
   </div>
     
 </body>
