Rearrange hero section, add content and button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
 
   <div class="content">
   <div class="hero">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet? Dolorem dignissimos maiores non delectus possimus dolor nulla repudiandae vitae provident quae, obcaecati ipsam unde impedit corrupti veritatis minima porro?
+    <div class="hero-left">
+    <div class="main-text">This website is awesome</div>
+    <div class="subtext">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast</div>
+    <button class="button">Sign up</button>
+    </div>
+    <div class="hero-right">
+        <div class="placeholder">This is a placeholder for an image</div>
+    </div>
   </div>  
   <div class="main">
     <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet? Dolorem dignissimos maiores non delectus possimus dolor nulla repudiandae vitae provident quae, obcaecati ipsam unde impedit corrupti veritatis minima porro?</div>
