Center and italicize the quotes, moved quote author to next line

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     </div>
   </div>
 
-  <div class="quotes">
-    “Why, then, the world's mine oyster, which I with sword will open!”
-    -Shakespear 1602
+  <div class="quotes">   
+    <div class="quote-text"><em>“Why, then, the world's mine oyster, which I with sword will open!”</em></div>
+    <div class="quote-author">-Shakespear 1602</div>
   </div>
 
   <div class="action">
