Add style to call to action section, add border to button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </div>
 
   <div class="content">
+
   <div class="hero">
     <div class="hero-left">
     <div class="main-text">This website is awesome</div>
@@ -59,9 +60,16 @@
   </div>
 
   <div class="action">
+    <div class="action-left">
+    <div class="action-header"><strong>Call to action! It's Time!</strong></div>
+    <p>Sign up for our product by clicking that button right over there!</p>    
+    </div>
+    <div class ="action-right">
     <button class="sign-up">Sign up!</button>
   </div>
   </div>
+  
+</div>
 
   <div class="footer">
     Footer
