--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
   <div class="hero">
     <div class="hero-left">
-    <div class="main-text">This website is awesome</div>
-    <div class="subtext">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast</div>
-    <button class="button">Sign up</button>
+      <div class="main-text">This website is awesome</div>
+      <div class="subtext">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast</div>
+      <button class="button">Sign up</button>
     </div>
     <div class="hero-right">
         <div class="placeholder">This is a placeholder for an image</div>
@@ -72,7 +72,7 @@
 </div>
 
   <div class="footer">
-    Footer
+    Copyright The Odin Project 2023
   </div>
     
 </body>
